# bigquery_python

./: README.md  docker-compose.yml  logging.conf  main.py  pyproject.toml
.devcontainer/: devcontainer.json
sql/: sample1.sql  sample2.sql
